--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<!--<h1>{{ title }}</h1>-->
-<app-heroes></app-heroes>
+<nav>
+  <a routerLink="/heroes"><h1>{{ title }}</h1></a>
+</nav>
+<router-outlet></router-outlet>
+<app-messages></app-messages>
